Minor Alignment BUG Solved

--- a/assets/css/css_01_header.css
+++ b/assets/css/css_01_header.css
@@ -84,6 +84,7 @@
 .scroll-header #logo {
     display: flex;
     align-items: center;
+    transform: translateY(0.08rem);
 }
 
 .scroll-header .nav {
